// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`design/SlideTabs supports a round medium size 1`] = `
.c0 {
  position: relative;
}

.c2 {
  cursor: pointer;
  display: flex;
  justify-content: center;
  padding: 10px;
  width: 33.333333333333336%;
  z-index: 1;
}

.c3 {
  display: none;
}

.c4 {
  background-color: #512FC9;
  border-radius: 60px;
  box-shadow: 0px 2px 6px rgba(12,12,14,0.1);
  height: 40px;
  left: calc(0% + 8px);
  margin: 4px 4px 4px 0;
  position: absolute;
  top: 0;
  transition: all 0.3s ease;
  width: calc(33.333333333333336% - 16px);
}

.c1 {
  align-items: center;
  background-color: rgba(255,255,255,0.05);
  border-radius: 60px;
  display: flex;
  height: 47px;
  justify-content: space-around;
}

<div>
  <div
    class="c0"
  >
    <nav
      class="c1"
      role="tablist"
    >
      <label
        class="c2"
        for="slide-tab-aws"
        role="tab"
      >
        aws
        <input
          class="c3"
          id="slide-tab-aws"
          name="slide-tab"
          type="radio"
        />
      </label>
      <label
        class="c2"
        for="slide-tab-automatically"
        role="tab"
      >
        automatically
        <input
          class="c3"
          id="slide-tab-automatically"
          name="slide-tab"
          type="radio"
        />
      </label>
      <label
        class="c2"
        for="slide-tab-manually"
        role="tab"
      >
        manually
        <input
          class="c3"
          id="slide-tab-manually"
          name="slide-tab"
          type="radio"
        />
      </label>
    </nav>
    <div
      class="c4"
    />
  </div>
</div>
`;

exports[`design/SlideTabs supports a round xlarge appearance 1`] = `
.c0 {
  position: relative;
}

.c2 {
  cursor: pointer;
  display: flex;
  justify-content: center;
  padding: 10px;
  width: 33.333333333333336%;
  z-index: 1;
}

.c3 {
  display: none;
}

.c4 {
  background-color: #512FC9;
  border-radius: 60px;
  box-shadow: 0px 2px 6px rgba(12,12,14,0.1);
  height: 56px;
  left: calc(0% + 8px);
  margin: 12px 12px 12px 0;
  position: absolute;
  top: 0;
  transition: all 0.3s ease;
  width: calc(33.333333333333336% - 16px);
}

.c1 {
  align-items: center;
  background-color: rgba(255,255,255,0.05);
  border-radius: 60px;
  display: flex;
  height: 80px;
  justify-content: space-around;
}

<div>
  <div
    class="c0"
  >
    <nav
      class="c1"
      role="tablist"
    >
      <label
        class="c2"
        for="slide-tab-aws"
        role="tab"
      >
        aws
        <input
          class="c3"
          id="slide-tab-aws"
          name="slide-tab"
          type="radio"
        />
      </label>
      <label
        class="c2"
        for="slide-tab-automatically"
        role="tab"
      >
        automatically
        <input
          class="c3"
          id="slide-tab-automatically"
          name="slide-tab"
          type="radio"
        />
      </label>
      <label
        class="c2"
        for="slide-tab-manually"
        role="tab"
      >
        manually
        <input
          class="c3"
          id="slide-tab-manually"
          name="slide-tab"
          type="radio"
        />
      </label>
    </nav>
    <div
      class="c4"
    />
  </div>
</div>
`;

exports[`design/SlideTabs supports a square medium size 1`] = `
.c0 {
  position: relative;
}

.c2 {
  cursor: pointer;
  display: flex;
  justify-content: center;
  padding: 10px;
  width: 33.333333333333336%;
  z-index: 1;
}

.c3 {
  display: none;
}

.c4 {
  background-color: #512FC9;
  border-radius: 8px;
  box-shadow: 0px 2px 6px rgba(12,12,14,0.1);
  height: 40px;
  left: calc(0% + 8px);
  margin: 4px 4px 4px 0;
  position: absolute;
  top: 0;
  transition: all 0.3s ease;
  width: calc(33.333333333333336% - 16px);
}

.c1 {
  align-items: center;
  background-color: rgba(255,255,255,0.05);
  border-radius: 8px;
  display: flex;
  height: 47px;
  justify-content: space-around;
}

<div>
  <div
    class="c0"
  >
    <nav
      class="c1"
      role="tablist"
    >
      <label
        class="c2"
        for="slide-tab-aws"
        role="tab"
      >
        aws
        <input
          class="c3"
          id="slide-tab-aws"
          name="slide-tab"
          type="radio"
        />
      </label>
      <label
        class="c2"
        for="slide-tab-automatically"
        role="tab"
      >
        automatically
        <input
          class="c3"
          id="slide-tab-automatically"
          name="slide-tab"
          type="radio"
        />
      </label>
      <label
        class="c2"
        for="slide-tab-manually"
        role="tab"
      >
        manually
        <input
          class="c3"
          id="slide-tab-manually"
          name="slide-tab"
          type="radio"
        />
      </label>
    </nav>
    <div
      class="c4"
    />
  </div>
</div>
`;

exports[`design/SlideTabs supports a square xlarge appearance (default) 1`] = `
.c0 {
  position: relative;
}

.c2 {
  cursor: pointer;
  display: flex;
  justify-content: center;
  padding: 10px;
  width: 33.333333333333336%;
  z-index: 1;
}

.c3 {
  display: none;
}

.c4 {
  background-color: #512FC9;
  border-radius: 8px;
  box-shadow: 0px 2px 6px rgba(12,12,14,0.1);
  height: 56px;
  left: calc(0% + 8px);
  margin: 12px 12px 12px 0;
  position: absolute;
  top: 0;
  transition: all 0.3s ease;
  width: calc(33.333333333333336% - 16px);
}

.c1 {
  align-items: center;
  background-color: rgba(255,255,255,0.05);
  border-radius: 8px;
  display: flex;
  height: 80px;
  justify-content: space-around;
}

<div>
  <div
    class="c0"
  >
    <nav
      class="c1"
      role="tablist"
    >
      <label
        class="c2"
        for="slide-tab-aws"
        role="tab"
      >
        aws
        <input
          class="c3"
          id="slide-tab-aws"
          name="slide-tab"
          type="radio"
        />
      </label>
      <label
        class="c2"
        for="slide-tab-automatically"
        role="tab"
      >
        automatically
        <input
          class="c3"
          id="slide-tab-automatically"
          name="slide-tab"
          type="radio"
        />
      </label>
      <label
        class="c2"
        for="slide-tab-manually"
        role="tab"
      >
        manually
        <input
          class="c3"
          id="slide-tab-manually"
          name="slide-tab"
          type="radio"
        />
      </label>
    </nav>
    <div
      class="c4"
    />
  </div>
</div>
`;

exports[`design/SlideTabs supports passing in a selected index 1`] = `
.c0 {
  position: relative;
}

.c2 {
  cursor: pointer;
  display: flex;
  justify-content: center;
  padding: 10px;
  width: 33.333333333333336%;
  z-index: 1;
}

.c3 {
  display: none;
}

.c4 {
  background-color: #512FC9;
  border-radius: 8px;
  box-shadow: 0px 2px 6px rgba(12,12,14,0.1);
  height: 56px;
  left: calc(33.333333333333336% + 8px);
  margin: 12px 12px 12px 0;
  position: absolute;
  top: 0;
  transition: all 0.3s ease;
  width: calc(33.333333333333336% - 16px);
}

.c1 {
  align-items: center;
  background-color: rgba(255,255,255,0.05);
  border-radius: 8px;
  display: flex;
  height: 80px;
  justify-content: space-around;
}

<div>
  <div
    class="c0"
  >
    <nav
      class="c1"
      role="tablist"
    >
      <label
        class="c2"
        for="slide-tab-aws"
        role="tab"
      >
        aws
        <input
          class="c3"
          id="slide-tab-aws"
          name="slide-tab"
          type="radio"
        />
      </label>
      <label
        class="c2"
        for="slide-tab-automatically"
        role="tab"
      >
        automatically
        <input
          class="c3"
          id="slide-tab-automatically"
          name="slide-tab"
          type="radio"
        />
      </label>
      <label
        class="c2"
        for="slide-tab-manually"
        role="tab"
      >
        manually
        <input
          class="c3"
          id="slide-tab-manually"
          name="slide-tab"
          type="radio"
        />
      </label>
    </nav>
    <div
      class="c4"
    />
  </div>
</div>
`;
